<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="horizontal|vertical">

    <ImageView
        android:id="@+id/crime_photo"
        android:layout_width="120dp"
        android:layout_height="185dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_crime_photo" />

    <ImageButton
        android:id="@+id/crime_camera"
        android:layout_width="80dp"
        android:layout_height="30dp"
        app:layout_constraintBottom_toBottomOf="@+id/tableLayout"
        app:layout_constraintEnd_toEndOf="@+id/crime_photo"
        app:layout_constraintStart_toStartOf="@+id/crime_photo"
        app:layout_constraintTop_toBottomOf="@+id/crime_photo"
        app:srcCompat="@android:drawable/ic_menu_camera" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/crime_title_label"
        android:textAlignment="center"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/crime_photo"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/crime_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:ems="10"
        android:hint="@string/crime_title_hint"
        android:inputType="textPersonName"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/textView"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <CheckBox
        android:id="@+id/call_police"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/call_of_police"
        app:layout_constraintStart_toStartOf="@+id/crime_title"
        app:layout_constraintTop_toBottomOf="@+id/crime_title" />

    <CheckBox
        android:id="@+id/crime_solved"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:text="@string/crime_solved_label"
        app:layout_constraintStart_toEndOf="@+id/call_police"
        app:layout_constraintTop_toBottomOf="@+id/crime_title" />

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@+id/crime_title"
        app:layout_constraintStart_toStartOf="@+id/crime_title"
        app:layout_constraintTop_toBottomOf="@+id/call_police">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/dateLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/dateLabel" />

            <Button
                android:id="@+id/crime_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                tools:text="Wed Apr 27 10:31 EST 2021" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/timeLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/timeLabel" />

            <Button
                android:id="@+id/crime_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                tools:text="Wed Apr 27 10:31 EST 2021" />
        </TableRow>
    </TableLayout>

    <Button
        android:id="@+id/crime_suspect"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/choose_suspect"
        app:layout_constraintEnd_toEndOf="@+id/tableLayout"
        app:layout_constraintStart_toStartOf="@+id/crime_photo"
        app:layout_constraintTop_toBottomOf="@+id/tableLayout" />

    <Button
        android:id="@+id/crime_phone"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/crime_phone"
        app:layout_constraintEnd_toEndOf="@+id/crime_suspect"
        app:layout_constraintStart_toStartOf="@+id/crime_suspect"
        app:layout_constraintTop_toBottomOf="@+id/crime_suspect" />

    <Button
        android:id="@+id/crime_report"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/send_report"
        app:layout_constraintEnd_toEndOf="@+id/crime_phone"
        app:layout_constraintStart_toStartOf="@+id/crime_phone"
        app:layout_constraintTop_toBottomOf="@+id/crime_phone" />

</androidx.constraintlayout.widget.ConstraintLayout>