<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="2dp"
    android:layout_marginRight="2dp"
    android:layout_marginBottom="2dp"
    card_view:cardCornerRadius="2dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/crime_photo_item"
            android:layout_width="40dp"
            android:layout_height="50dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toTopOf="parent"
            card_view:srcCompat="@drawable/ic_crime_photo" />

        <TextView
            android:id="@+id/crime_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/crime_title"
            android:textColor="@color/black"
            android:textSize="18sp"
            card_view:layout_constraintEnd_toStartOf="@+id/police_button"
            card_view:layout_constraintStart_toEndOf="@+id/crime_photo_item"
            card_view:layout_constraintTop_toTopOf="@+id/crime_photo_item" />

        <TextView
            android:id="@+id/crime_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="2dp"
            android:text="@string/crime_date"
            android:textSize="12sp"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintEnd_toStartOf="@+id/crime_solved"
            card_view:layout_constraintStart_toEndOf="@+id/crime_photo_item" />

        <ImageButton
            android:id="@+id/police_button"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginEnd="4dp"
            android:background="@color/white"
            android:contentDescription="@string/police_button"
            android:src="@android:drawable/ic_btn_speak_now"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintTop_toTopOf="@+id/crime_title" />

        <ImageView
            android:id="@+id/crime_solved"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4dp"
            card_view:layout_constraintBottom_toBottomOf="@+id/crime_date"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:srcCompat="@drawable/ic_crime_solved" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>